--- a/specification/ai/HealthInsights/HealthInsights.RadiologyInsights/tspconfig.yaml
+++ b/specification/ai/HealthInsights/HealthInsights.RadiologyInsights/tspconfig.yaml
@@ -55,9 +55,9 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "health-insights-radiologyinsights-rest"
+    emitter-output-dir: "{js-sdk-folder}/sdk/{service-directory-name}/health-insights-cancerprofiling-rest"
     generate-metadata: true
-    generate-sample: true
-    is-modular-library: true
+    is-modular-library: false
     package-details:
       name: "@azure-rest/health-insights-radiologyinsights"
     flavor: azure
