--- a/specification/resourceconnector/resource-manager/Microsoft.ResourceConnector/stable/2022-10-27/examples/TelemetryConfig.json
+++ b/specification/resourceconnector/resource-manager/Microsoft.ResourceConnector/stable/2022-10-27/examples/TelemetryConfig.json
@@ -9,5 +9,7 @@
         "telemetryInstrumentationKey": "xxxxxxxxxxxxxxxxxxxxxxxxxxx"
       }
     }
-  }
+  },
+  "operationId": "Appliances_GetTelemetryConfig",
+  "title": "GetTelemetryConfig Appliance"
 }
