--- a/specification/resourceconnector/resource-manager/Microsoft.ResourceConnector/stable/2022-10-27/examples/AppliancesCreate_Update.json
+++ b/specification/resourceconnector/resource-manager/Microsoft.ResourceConnector/stable/2022-10-27/examples/AppliancesCreate_Update.json
@@ -1,9 +1,6 @@
 {
   "parameters": {
     "api-version": "2022-10-27",
-    "subscriptionId": "11111111-2222-3333-4444-555555555555",
-    "resourceGroupName": "testresourcegroup",
-    "resourceName": "appliance01",
     "identity": {
       "type": "SystemAssigned"
     },
@@ -15,68 +12,73 @@
           "provider": "VMWare"
         }
       }
-    }
+    },
+    "resourceGroupName": "testresourcegroup",
+    "resourceName": "appliance01",
+    "subscriptionId": "11111111-2222-3333-4444-555555555555"
   },
   "responses": {
     "200": {
       "body": {
-        "id": "/subscriptions/11111111-2222-3333-4444-555555555555/resourceGroups/testrg/providers/Microsoft.ResourceConnector/appliances/appliance01",
         "name": "appliance01",
         "type": "Microsoft.ResourceConnector/appliances",
-        "location": "West US",
-        "properties": {
-          "distro": "AKSEdge",
-          "version": "1.0.1",
-          "provisioningState": "Updating",
-          "status": "Running",
-          "publicKey": "xxxxxxxx",
-          "infrastructureConfig": {
-            "provider": "VMWare"
-          }
-        },
+        "id": "/subscriptions/11111111-2222-3333-4444-555555555555/resourceGroups/testrg/providers/Microsoft.ResourceConnector/appliances/appliance01",
         "identity": {
           "type": "SystemAssigned",
           "principalId": "11111111-1111-1111-1111-111111111111",
           "tenantId": "111111-1111-1111-1111-111111111111"
         },
+        "location": "West US",
+        "properties": {
+          "distro": "AKSEdge",
+          "infrastructureConfig": {
+            "provider": "VMWare"
+          },
+          "provisioningState": "Updating",
+          "publicKey": "xxxxxxxx",
+          "status": "Running",
+          "version": "1.0.1"
+        },
         "systemData": {
+          "createdAt": "2020-04-24T18:53:29.0928001Z",
           "createdBy": "string",
           "createdByType": "Application",
-          "createdAt": "2020-04-24T18:53:29.0928001Z",
+          "lastModifiedAt": "2020-04-24T18:53:29.0928001Z",
           "lastModifiedBy": "string",
-          "lastModifiedByType": "Application",
-          "lastModifiedAt": "2020-04-24T18:53:29.0928001Z"
+          "lastModifiedByType": "Application"
         }
       }
     },
     "201": {
       "body": {
-        "id": "/subscriptions/11111111-2222-3333-4444-555555555555/resourceGroups/testrg/providers/Microsoft.ResourceConnector/appliances/appliance01",
         "name": "appliance01",
         "type": "Microsoft.ResourceConnector/appliances",
-        "location": "West US",
-        "properties": {
-          "distro": "AKSEdge",
-          "provisioningState": "Creating",
-          "status": "WaitingForHeartbeat",
-          "infrastructureConfig": {
-            "provider": "VMWare"
-          }
-        },
+        "id": "/subscriptions/11111111-2222-3333-4444-555555555555/resourceGroups/testrg/providers/Microsoft.ResourceConnector/appliances/appliance01",
         "identity": {
           "type": "SystemAssigned",
           "principalId": "11111111-1111-1111-1111-111111111111",
           "tenantId": "111111-1111-1111-1111-111111111111"
         },
+        "location": "West US",
+        "properties": {
+          "distro": "AKSEdge",
+          "infrastructureConfig": {
+            "provider": "VMWare"
+          },
+          "provisioningState": "Creating",
+          "status": "WaitingForHeartbeat"
+        },
         "systemData": {
+          "createdAt": "2020-04-24T18:53:29.0928001Z",
           "createdBy": "string",
           "createdByType": "Application",
-          "createdAt": "2020-04-24T18:53:29.0928001Z",
+          "lastModifiedAt": "2020-04-24T18:53:29.0928001Z",
           "lastModifiedBy": "string",
-          "lastModifiedByType": "Application",
-          "lastModifiedAt": "2020-04-24T18:53:29.0928001Z"
+          "lastModifiedByType": "Application"
         }
       }
     }
-  }
+  },
+  "operationId": "Appliances_CreateOrUpdate",
+  "title": "Create/Update Appliance"
 }
